--- a/Presentation/DenemeTakipAPI.API/appsettings.json
+++ b/Presentation/DenemeTakipAPI.API/appsettings.json
@@ -6,9 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  
-  
-  "AngularClientUrl": "http://localhost:3000/"
-
-
+  "AngularClientUrl": "http://localhost:3000/",
 }
