--- a/Infrastructure/DenemeTakipAPI.Persistence/DenemeTakipAPI.Persistence.csproj
+++ b/Infrastructure/DenemeTakipAPI.Persistence/DenemeTakipAPI.Persistence.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="33.0.1" />
     <PackageReference Include="DotNetEnv" Version="3.1.1" />
     <PackageReference Include="Microsoft.AspNet.Identity.EntityFramework" Version="2.2.4" />
     <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.3.0" />
