todoelement için altyapı oluşturuldu.

--- a/Core/DenemeTakipAPI.Application/DenemeTakipAPI.Application.csproj
+++ b/Core/DenemeTakipAPI.Application/DenemeTakipAPI.Application.csproj
@@ -26,4 +26,9 @@
     <ProjectReference Include="..\DenemeTakipAPI.Domain\DenemeTakipAPI.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Commands\ToDoElement\" />
+    <Folder Include="Features\Queries\ToDoElement\" />
+  </ItemGroup>
+
 </Project>
